--- a/portfolio/src/components/About/index.scss
+++ b/portfolio/src/components/About/index.scss
@@ -23,21 +23,22 @@
         width: 200px;
         height: 200px;
         border: 1px solid #ccc;
-        background: rgba(255 , 255,255,0.4);
-        font-size: 180px;
+        background: rgba(255,255,255, 0.4);
+        font-size: 100px;
         display: flex;
         justify-content: center;
         align-items: center;
-        box-shadow: 0 0 20px lightyellow;
+        box-shadow: 0 0 20px 0px lightyellow;
     }
 
     .face1{
         transform: translateZ(100px);
 
+
     }
     .face2{
         transform: rotateY(90deg) translateZ(100px);
-        
+
     }
     .face3{
         transform: rotateY(90deg) rotateX(90deg) translateZ(100px);
@@ -45,7 +46,7 @@
     }
     .face4{
         transform: rotateY(180deg) rotateZ(90deg) translateZ(100px);
-        
+       
     }
     .face5{
         transform: rotateY(-90deg) rotateZ(90deg)translateZ(100px);
