--- a/portfolio/src/components/Home/index.scss
+++ b/portfolio/src/components/Home/index.scss
@@ -11,7 +11,8 @@
 
     h1{
         color: #fff;
-        font-size: 53px;
+        font-size: 56px;
+        line-height: 53px;
         margin: 0;
         font-family: 'Coolvetica';
         font-weight: 400;
@@ -23,7 +24,7 @@
            font-size: 18px;
            position: absolute;
            margin-top: -40px;
-           left: 15px;
+           left: -15px;
            opacity: 0.6;
         }
 
@@ -70,7 +71,7 @@
     border: 1px solid #ffd700;
     margin-top: 25px;
     float: left;
-    animation: fadeIn 1s 1.8s backwards;
+    animation: fadeInAnimation 1s 1.8s backwards;
     white-space: nowrap;
 
     &:hover{
@@ -81,4 +82,47 @@
   }
 
   
+}
+
+@media screen and (max-width: 1200px) {
+  .tags,
+  .home-page h1:before,
+  .home-page h1:after {
+    display: none;
+  }
+
+  .home-page .text-zone {
+    position: initial;
+    width: 100%;
+    transform: none;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+
+  .home-page .flat-button {
+    float: none;
+    display: block;
+    margin: 20px auto 0 auto;
+    width: 124px;
+  }
+
+  .logo-container {
+    position: relative;
+    width: 100px;
+    height: auto;
+    top: 50px;
+    right: 0;
+    box-sizing: border-box;
+    margin: auto;
+    left: 0;
+  }
+
+  .logo-container svg {
+    position: absolute;
+    top: auto;
+    right: auto;
+    bottom: auto;
+    left: 0;
+    margin: auto;
+  }
 }
