complete the structure of portfolio

--- a/portfolio/src/components/Sidebar/index.scss
+++ b/portfolio/src/components/Sidebar/index.scss
@@ -1,6 +1,6 @@
 .nav-bar{
     background: #181818;
-    width: 60px;
+    width: 70px;
     height: 100%;
     position:absolute;
     top: 0;
@@ -87,7 +87,12 @@
 
         a.contact-link{
             &:after{
-                content: 'CONTENT';
+                content: 'CONTACT';
+            }
+        }
+        a.portfolio-link{
+            &:after{
+                content: 'PORTFOLIO';
             }
         }
 
@@ -96,6 +101,7 @@
                 color: #ffd700;
             }
         }
+
     }
     ul{
         position: absolute;
